macro_proc_func/tests/fail.rs
use macro_proc_func::*;

fn main() {
    let _ = add!();
}
